United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7120875 Networking updates (ipv6) and regression test script fixes for macos port
7120875 : Networking updates (ipv6) and regression test script fixes for macos port

Details
Type:
Bug
Submit Date:
2011-12-13
Status:
Closed
Updated Date:
2012-03-27
Project Name:
JDK
Resolved Date:
2012-03-27
Component:
core-libs
OS:
os_x
Sub-Component:
java.net
CPU:
x86,generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
7
Fixed Versions:
7u4

Related Reports
Duplicate:
Relates:

Sub Tasks

Description
Macosx (Lion) does not seem to be setting a default scope_id (even though the Kame IPv6 implementation can do it). 
Also, there is a problem that MulticastSocket.setNetworkInterface() must be called before it is possible to join IPv6 groups.
This CR being used to push other regression test script fixes also.
Description from http://java.net/jira/browse/MACOSX_PORT-216:
Build: b201
Keywords: test-fail-macos
Tests failed (Regression)
java/net/MulticastSocket/NoLoopbackPackets.java

Build: b204
Keywords: test-fail-macos
Tests failed (JCK-RUNTIME)
api/java_net/Datagram/Socket/index_connect
api/java_net/MulticastSocket/descriptions_send

                                    

Comments
EVALUATION

Solution is to look up a default interface at startup and use that for whenever a scope_id is not spcecified. we may need to hook into the OS, for the situation when they eventually fix this. As it probabaly makes more sense to 
let the system choose the default rather than java do it.
                                     
2011-12-13



Hardware and Software, Engineered to Work Together