7120875: fix macos ipv6 issue and update multiple test scripts Reviewed-by: alanb Contributed-by: kurchi.subhra.hazra@oracle.com, jason.uh@oracle.com